--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
-MONGODB_URI=
+MONGODB_URI=mongodb+srv://23kundanrajendra:Ivj2tAhks5DGhQvs@cluster0.aqxfkte.mongodb.net
 CLERK_PUBLISHABLE_KEY=pk_test_Y3J1Y2lhbC1yYWNjb29uLTI0LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_U6iXnWZXKUUTXP4lcSseo5aO2kSmbeOa4jVYxj2C7p
 
 
 CLERK_WEBHOOK_SECRET=whsec_N7hg027cFv8/vShlaYIC7zdEtXh03IVS
+
+
